# mcp-tool-rossicorp-roles

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
mcp_rag_bridge/: __init__.py  server.py
roles/: mcp_toolsmith.md
rossicorp_roles/: __init__.py  rag_client.py  server.py
tests/: test_bridge.py  test_roles.py
