[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-rag-bridge"
version = "0.1.0"
description = "MCP stdio server that bridges to rag-service for role and knowledge retrieval."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "mcp>=1.23.0",
  "requests>=2.31.0",
]
authors = [{ name = "Ian Rossi" }]

[project.optional-dependencies]
test = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.scripts]
mcp-rag-bridge = "mcp_rag_bridge.server:main"

[tool.setuptools]
packages = ["mcp_rag_bridge"]
