[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-tool-rossicorp-roles"
version = "0.2.0"
description = "MCP stdio server for managing Rossicorp roles via rag-service (search, CRUD, list)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "mcp>=1.23.0",
  "requests>=2.31.0",
]
authors = [{ name = "Ian Rossi" }]

[project.optional-dependencies]
test = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.scripts]
rossicorp-roles = "rossicorp_roles.server:main"

[tool.setuptools]
packages = ["rossicorp_roles"]
